# zero2prod

./: .dockerignore  .env  Cargo.toml  configuration.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: general.yml
configuration/: default.yml  local.yml  production.yml
docker/: Dockerfile
migrations/: 20231204215351_create_subscriptions_table.sql
scripts/: init_database.ps1  init_database.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
