[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = { version = "0.13", features = ["yaml"]}
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.22", features = ["json"] }
wiremock = "0.5.22"
rand = "0.8.5"
thiserror = "1.0.51"
anyhow = "1.0.76"
base64 = "0.13"
argon2 = { version = "0.5.2", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"


[dev-dependencies]
claim = "0.5.0"
once_cell = "1.18.0"
fake = "2.9.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
tokio = { version = "1", features = ["rt", "macros"]}
serde_json = "1.0.108"
linkify = "0.10.0"
